welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:17: error: not found: value motif
	motif()
        ^